# uaviak-timetable-backuper

./: README.md  pyproject.toml
uaviak_timetable_backuper/: __init__.py  __main__.py  timetable_directory.py  version_timetable.py
